fix css, paste file vertical spacing

--- a/pastgit/public/css/pastgit.css
+++ b/pastgit/public/css/pastgit.css
@@ -25,6 +25,9 @@
     margin-right: 40px;
 }
 
+#content .fileContent {
+    margin-bottom: 10px;
+}
 
 #content .show .fileContent {
     background-color: #eee;
@@ -32,5 +35,4 @@
     padding: 1em;
     white-space: pre;
     font-family: 'Bitstream Vera Sans Mono','Courier',monospace;
-    margin-bottom: 10px;
 }
